@@ -1,18 +1,18 @@
-# $NetBSD: Makefile,v 1.8 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.9 2019/07/31 19:09:38 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/genetics/
-COMMENT=	Package for choosing univariate class intervals for graphics
-LICENSE=	gnu-gpl-v2
+COMMENT=	Choose univariate class intervals
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	classInt
-R_PKGVER=	0.1-23
+R_PKGVER=	0.3-3
+
+DEPENDS+=	R-e1071>=1.6.8:../../math/R-e1071
 
 USE_LANGUAGES=	c fortran
-
-DEPENDS+=	R-e1071>=1.6:../../math/R-e1071
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
