@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.5 2016/01/01 12:25:21 wen Exp $
+$NetBSD: distinfo,v 1.6 2019/07/31 19:09:38 brook Exp $
 
-SHA1 (R/classInt_0.1-23.tar.gz) = b560a589205bffe298d8d7f4280e19b1b11adf9f
-RMD160 (R/classInt_0.1-23.tar.gz) = 08061ba4911c99c0aa7e6487909b0c06c2f63a59
-SHA512 (R/classInt_0.1-23.tar.gz) = c5e945fff7925a2a9546494c212665088f6df4bbf93442628c8324b7e149dad80d282fb3df493e29a61292b937bb40ce5417ff40bfa6e451318d58ffc201ae54
-Size (R/classInt_0.1-23.tar.gz) = 18917 bytes
+SHA1 (R/classInt_0.3-3.tar.gz) = 7084dc6992f3ccb78244aa9d3cbb9cf396210833
+RMD160 (R/classInt_0.3-3.tar.gz) = b519b1faee965a7791873ea0ca7070a36cec6caa
+SHA512 (R/classInt_0.3-3.tar.gz) = fe0f60654f385655840cfe4abdbaa818c14cfaddcc9975fffa800b268f3f9b17f387bef4a07d815ececa9d2f00ca13fc1136213ee1ac00a0906de6704998187c
+Size (R/classInt_0.3-3.tar.gz) = 18231 bytes
